--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,35 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+margin: 0;
+padding: 0;
+font-family: 'sans-serif'
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.board{
+  width: 31rem;
+  height: 31rem;
+  margin: auto;
+  border: 1px soid black;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-wrap: wrap;
 }
 
-.App-link {
-  color: #61dafb;
+.square{
+  width: 10rem;
+  height: 10rem;
+  border: 1px solid black;
+  margin: auto;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.square:hover{
+  background-color: lightblue;
+}
+
+.play{
+padding-left: 20px;
+font-family:'sans-serif';
+font-size: 3rem;
+font-weight: bolder;
 }
